fixed wrap alignment bug

--- a/os/style.css
+++ b/os/style.css
@@ -65,6 +65,7 @@ body {
 
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
   gap: 10px;
 }
 
